add a generate command / module

--- a/config.ini
+++ b/config.ini
@@ -17,6 +17,7 @@ amsi_step1=%(directory)s/amsi_bypass_step1.ps1
 amsi_step2=%(directory)s/amsi_bypass_step2.ps1
 ; In order to disable ETW
 etw_script=%(directory)s/bp_etw.ps1
+amsi_bypass_scripts=amsi_bypass_step1.ps1,amsi_bypass_step2.ps1
 
 [Routes]
 amsi_route1=amsi_step1.log
