Add a minishhutils class, parsing script from config file

--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,15 @@ amsi_step1=%(directory)s/amsi_bypass_step1.ps1
 amsi_step2=%(directory)s/amsi_bypass_step2.ps1
 ; In order to disable ETW
 etw_script=%(directory)s/bp_etw.ps1
+
+[Windows]
+; Scripts to run before starting reverse_shell (In windows just classic amsi bypass)
+; on_before_shell scripts will be used when generating a payload using "-o infile" option
 amsi_bypass_scripts=amsi_bypass_step1.ps1,amsi_bypass_step2.ps1
+on_before_shell=%(amsi_bypass_scripts)s
+; Scripts to run after receiving reverse shell
+; You can bypass amsi automatically or leave it empty
+on_receive_shell=
 
 [Routes]
 amsi_route1=amsi_step1.log
