Update generate to take in argument amsi_script if needed

--- a/config.ini
+++ b/config.ini
@@ -11,14 +11,8 @@ directory=loot
 
 [Script]
 directory=scripts
-default_script=%(directory)s/default.ps1
-rev_shell_name=%(directory)s/rev.ps1
-amsi_step1=%(directory)s/amsi_bypass_step1.ps1
-amsi_step2=%(directory)s/amsi_bypass_step2.ps1
-; In order to disable ETW
-etw_script=%(directory)s/bp_etw.ps1
 
-[Windows]
+[Powershell]
 ; Scripts to run before starting reverse_shell (In windows just classic amsi bypass)
 ; on_before_shell scripts will be used when generating a payload using "-o infile" option
 amsi_bypass_scripts=amsi_bypass_step1.ps1,amsi_bypass_step2.ps1
@@ -26,16 +20,18 @@ on_before_shell=%(amsi_bypass_scripts)s
 ; Scripts to run after receiving reverse shell
 ; You can bypass amsi automatically or leave it empty
 on_receive_shell=
+; Reverse shell script that contains the payload generated
+reverse_shell_script=rev.ps1
+; Script that contains all the payload
+all_in_one_script=all_in_one.ps1
+
+[Linux]
+on_before_shell=
+on_receive_shell=
+reverse_shell_script=rev.sh
+all_in_one_script=all_in_one.sh
 
 [Routes]
-amsi_route1=amsi_step1.log
-amsi_route2=amsi_step2.log
-; Route associated
-etw_route=etw_route.log
-
-[Session]
-; Bypass amsi automatically
-auto_bypass_amsi=Y
 
 [Interfaces]
 default = tun0
