Update config file with new possible value

--- a/config.ini
+++ b/config.ini
@@ -17,19 +17,21 @@ directory=scripts
 ; on_before_shell scripts will be used when generating a payload using "-o infile" option
 amsi_bypass_scripts=amsi_bypass_step1.ps1,amsi_bypass_step2.ps1
 on_before_shell=%(amsi_bypass_scripts)s
-; Scripts to run after receiving reverse shell
-; You can bypass amsi automatically or leave it empty
-on_receive_shell=
 ; Reverse shell script that contains the payload generated
 reverse_shell_script=rev.ps1
+; The shell must be upgraded Y --> Yes, N --> No
+auto_upgrade=N
 ; Script that contains all the payload
 all_in_one_script=all_in_one.ps1
+; Script that are loaded once the shell is received (coma separated)
+auto_load_scripts=
 
 [Linux]
 on_before_shell=
-on_receive_shell=
+auto_upgrade=Y
 reverse_shell_script=rev.sh
 all_in_one_script=all_in_one.sh
+auto_load_scripts=default.sh
 
 [Interfaces]
 default = tun0
