--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ scripts/*
 !scripts/amsi_bypass_step1.ps1
 !scripts/amsi_bypass_step2.ps1
 !scripts/Invoke-ConPtyShell.ps1
+!scripts/default.sh
 **/__pycache__/
