Test adding new set key in Menu

--- a/config.ini
+++ b/config.ini
@@ -28,7 +28,7 @@ auto_load_scripts=
 
 [Linux]
 on_before_shell=
-auto_upgrade=N
+auto_upgrade=Y
 reverse_shell_script=rev.sh
 all_in_one_script=all_in_one.sh
 auto_load_scripts=default.sh
