--- a/config.ini
+++ b/config.ini
@@ -31,7 +31,9 @@ on_before_shell=
 auto_upgrade=Y
 reverse_shell_script=rev.sh
 all_in_one_script=all_in_one.sh
-auto_load_scripts=default.sh
+; auto_load_scripts=default.sh
+auto_load_scripts=
+prompt=(\[\x1b[1mMinishh\x1b[0m\]) \[\x1b[38;5;208m\]\u@\h\[\x1b[0m:\[\x1b[1;37m\]\w\[\x1b[0m\]\[\x1b[38;5;208m\] \$\[\x1b[0m\]
 
 [Interfaces]
 default = tun0
