Updating the prompt for powershell

--- a/config.ini
+++ b/config.ini
@@ -25,6 +25,7 @@ auto_upgrade=N
 all_in_one_script=all_in_one.ps1
 ; Script that are loaded once the shell is received (coma separated)
 auto_load_scripts=
+prompt=[Minishh] PS $(Get-Location)>
 
 [Linux]
 on_before_shell=
