--- a/config.ini
+++ b/config.ini
@@ -28,12 +28,15 @@ prompt=[Minishh] PS $(Get-Location)>
 
 [Linux]
 on_before_shell=
-auto_upgrade=N
+auto_upgrade=Y
 reverse_shell_script=rev.sh
 all_in_one_script=all_in_one.sh
 ; auto_load_scripts=default.sh
 auto_load_scripts=
-prompt=(\[\x1b[1mMinishh\x1b[0m\]) \[\x1b[38;5;208m\]\u@\h\[\x1b[0m:\[\x1b[1;37m\]\w\[\x1b[0m\]\[\x1b[38;5;208m\] \$\[\x1b[0m\]
+; Below prompt is interpreted by rich, so we can use easy color
+; Carefull, breaking this prompt might mess with minishh identication part
+prompt=([u]Minishh[/u]) [orange1]\u@\h[/orange1]:[b]\w[orange1] \\\\$[/b][/orange1]
 
 [Interfaces]
 default = tun0
+
