Update the shell idnetification and the way it is managed

--- a/config.ini
+++ b/config.ini
@@ -25,7 +25,7 @@ auto_upgrade=N
 all_in_one_script=all_in_one.ps1
 ; Script that are loaded once the shell is received (coma separated)
 auto_load_scripts=
-prompt=[Minishh] PS $(Get-Location)>
+prompt=[Minishh] PS $(Get-Location)\n>
 
 [Linux]
 on_before_shell=
@@ -36,7 +36,7 @@ all_in_one_script=all_in_one.sh
 auto_load_scripts=
 ; Below prompt is interpreted by rich, so we can use easy color
 ; Carefull, breaking this prompt might mess with minishh identication part
-prompt=([u]Minishh[/u]) [orange1]\u@\h[/orange1]:[b]\w[orange1] \\\\$[/b][/orange1]
+prompt=([u]Minishh[/u]) [orange1]\u@\h[/orange1]:[b]\w[orange1] \\$[/b][/orange1]
 
 [Interfaces]
 default = tun0
